--- a/config.env
+++ b/config.env
@@ -4,12 +4,12 @@ PREFIX="."
 PUBLIC_MODE='yes'
 
 #═══════[ OWNER DETAILS ]═══════✧#
-OWNER_NAME="᚛Ibrahim adams᚜"
-OWNER_NUMBER=""
+OWNER_NAME="᚛𝗭𝗔𝗬𝗔𝗡𝗦𝗘𝗥᚜"
+OWNER_NUMBER="601117508525"
 
 #═══════[ BOT PROFILE ]═══════✧#
-BOT_NAME="BWM-XMD"
-BOT_IMAGE=""
+BOT_NAME="🍒⃟◄▣𝚭𝚫𝐘𝚫𝚴 𒋲 𝚭𝚵𝚪🍃▣►"
+BOT_IMAGE="https://i.imgur.com/VgxJeCm.jpeg"
 STARTING_BOT_MESSAGE='yes'
 
 #═══════[ PRESENCE & AUTOMATION ]═══════✧#
@@ -30,8 +30,8 @@ ANTIDELETE_RECOVER_CONVENTION="no"
 #═══════[ MESSAGE HANDLING ]═══════✧#
 STATUS_REACT_EMOJIS="🚀,🌎"
 AUTO_REACT="no"
-WELCOME_MESSAGE="no"
-GOODBYE_MESSAGE="no"
+WELCOME_MESSAGE="yes"
+GOODBYE_MESSAGE="yes"
 
 #═══════[ HEROKU CONFIG ]═══════✧#
 HEROKU_APP_NAME=
