--- a/config.env
+++ b/config.env
@@ -4,11 +4,11 @@ PREFIX="."
 PUBLIC_MODE='yes'
 
 #═══════[ OWNER DETAILS ]═══════✧#
-OWNER_NAME="᚛𝗭𝗔𝗬𝗔𝗡𝗦𝗘𝗥᚜"
+OWNER_NAME="᚛❤❥❥═══𝓩𝓐𝓨𝓐𝓝𝓢𝓔𝓡 ══❤᚜"
 OWNER_NUMBER="601117508525"
 
 #═══════[ BOT PROFILE ]═══════✧#
-BOT_NAME="🍒⃟◄▣𝚭𝚫𝐘𝚫𝚴 𒋲 𝚭𝚵𝚪🍃▣►"
+BOT_NAME="❤❥❥═══𝓩𝓐𝓨𝓐𝓝𝓢𝓔𝓡 ══❤"
 BOT_IMAGE="https://i.imgur.com/VgxJeCm.jpeg"
 STARTING_BOT_MESSAGE='yes'
 
